--- a/css/style.css
+++ b/css/style.css
@@ -30,12 +30,6 @@ body {
     flex-grow: 2;
 }
 
-.menu {
-    background-color: green;
-    height: 80vh;
-    width: 20vw;
-}
-
 #map {
     height: 80vh;
     width: 80vw;
@@ -68,4 +62,16 @@ body {
 
 .marker-cluster-red {
     background-color: #d00000;
+}
+
+.meny {
+    background-color: green;
+    align-items: center;
+    justify-content: center;
+    height: 80vh;
+    width: 20vw;
+}
+
+.blogg-knapp {
+    background-color: orange;
 }
