--- a/css/style.css
+++ b/css/style.css
@@ -64,12 +64,20 @@ body {
     background-color: #d00000;
 }
 
-.meny {
+#meny {
     background-color: green;
     align-items: center;
     justify-content: center;
     height: 80vh;
     width: 20vw;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 2;
+    overflow-y: scroll;
+}
+
+.menyDiv {
+    margin: 1vw;
 }
 
 .blogg-knapp {
@@ -78,9 +86,28 @@ body {
     border-width: 2px;
     border-radius: 3px;
     border-color: white;
-    height: 5vh;
-    width: 10vw;
-    padding-left: 5vw;
-    padding-right: 5vw;
+    height: 10vh;
+    width: 15vw;
+    margin: 1.5vw;
     cursor: pointer;
+    font-size: 4vh;
+    font-weight: bold;
 }
+
+.blogg-knapp:hover {
+    background-color: #0077cc; /* blå hover */
+    color: white;
+    border-color: white;
+}
+
+.blogg-knapp.siste {
+    background-color: #6a0dad; /* lilla for siste dag */
+    color: white;
+    border: 2px solid white;
+  }
+  
+  .blogg-knapp.siste:hover {
+    background-color: #8a2be2; /* lysere lilla på hover */
+    color: white;
+    border-color: white;
+  }
