--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@ body {
     background-color: orange;
     color: white;
     border-width: 2px;
-    border-radius: 3px;
+    border-radius: 10px;
     border-color: white;
     height: 10vh;
     width: 15vw;
@@ -95,19 +95,15 @@ body {
 }
 
 .blogg-knapp:hover {
-    background-color: #0077cc; /* blå hover */
-    color: white;
-    border-color: white;
+    background-color: blue; /* #0077cc; /* blå hover */
 }
 
 .blogg-knapp.siste {
-    background-color: #6a0dad; /* lilla for siste dag */
-    color: white;
-    border: 2px solid white;
-  }
+    background-color: orangered; /* rød-oransje for siste dag */
+    border-style: dotted;
+    border-width: 10px;
+}
   
   .blogg-knapp.siste:hover {
-    background-color: #8a2be2; /* lysere lilla på hover */
-    color: white;
-    border-color: white;
-  }
+    background-color: blue; /* rød på hover */
+}
