--- a/css/style.css
+++ b/css/style.css
@@ -113,7 +113,14 @@ body {
     justify-content: center;
     align-items: center;
     border-radius: 50%;
-    width: 30px;
-    height: 30px;
-    box-shadow: 0 0 4px rgba(0,0,0,0.5);
+    width: 40px;
+    height: 40px;
+    box-shadow: 0 4px 8px rgba(0,0,0,0.4); /* tydeligere skygge */
+    border: 2px solid white;
+}
+
+.leaflet-bootstrap-icon .custom-marker i {
+    font-size: 22px;         /* Større ikon */
+    color: white;
+    text-shadow: 1px 1px 2px rgba(0,0,0,0.7);  /* "Glow"/3D-effekt */
 }
