--- a/css/style.css
+++ b/css/style.css
@@ -164,12 +164,18 @@ body {
 }
   
 .sidebar-content {
+    display: flex;
+    flex-direction: column;
     margin: 15px;
-    overflow-y: scroll;
+    height: 100%;
 }
 
 .sidebar-section {
-    margin-bottom: 1rem;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    border-top: 1px solid rgba(255, 255, 255, 0.3);
+    overflow: hidden;
 }
 
 .sidebar-section h4 {
@@ -177,6 +183,11 @@ body {
     font-size: 4vh;
     font-weight: bold;
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+}
+
+.knappContainer {
+    flex: 1;
+    overflow-y: auto;
 }
 
 .lag-knapp {
