--- a/css/style.css
+++ b/css/style.css
@@ -130,7 +130,7 @@ body {
     color: white;
     display: block;
     width: 0;
-    height: 100%;
+    height: 80vh;
     position: absolute;
     top: 0;
     left: 0;
@@ -141,17 +141,25 @@ body {
     pointer-events: none;
 }
 
-.sideMeny.åpen {
+.sideMeny.apen {
     width: 20vw;
     padding: 10px;
     pointer-events: auto;
+    height: calc(100% - 20px);
+}
+
+.sidebar-content {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 3;
+    height: calc(80vh - 20px)
 }
 
 .sidebar-header {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding-bottom: 10px;
+    height: 8vh;
     border-bottom: 1px solid rgba(255, 255, 255, 0.3);
 }
   
@@ -161,13 +169,6 @@ body {
     left: 15px;
     font-weight: bold;
     font-size: 5vh;
-}
-  
-.sidebar-content {
-    display: flex;
-    flex-direction: column;
-    flex-grow: 2;
-    height: 100%;
 }
 
 .seksjon-header {
@@ -180,9 +181,8 @@ body {
 }
 
 .sidebar-section {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
+    height: 50%;
+    background-color: orange;
     overflow: hidden;
 }
 
