--- a/css/style.css
+++ b/css/style.css
@@ -195,7 +195,7 @@ body {
 }
 
 .knappContainer {
-    height: calc((80vh - 20px) / 2 - 8vh);
+    height: calc((72vh - 20px) / 2 - 8vh);
     overflow-y: scroll;
 }
 
@@ -224,17 +224,14 @@ body {
     margin-top: 5px;
     margin-bottom: 5px;
     background-color: green;
-    color: white;
-    font-size: 3vh;
-    border: white;
-    border-width: 5px;
-    border-radius: 10px;
+    height: 3vh;
+    width: 3vh;
+    border: black;
+    border-width: 10px;
+    border-radius: 1.5vh;
     cursor: pointer;
-    text-align: left;
 }
 
 .master-knapp.av {
-    opacity: 0.5;
-    text-decoration: line-through;
-    background-color: red;
+    background-color: white;
 }
