--- a/css/style.css
+++ b/css/style.css
@@ -219,6 +219,14 @@ body {
     background-color: red;
 }
 
+.lag-knapp.Linjer {
+    display: block;
+}
+
+.lag-knapp.Steder {
+    display: block;
+}
+
 .master-knapp {
     display: block;
     margin-top: 5px;
@@ -227,7 +235,7 @@ body {
     height: 3vh;
     width: 3vh;
     border: black;
-    border-width: 10px;
+    border-width: 50px;
     border-radius: 1.5vh;
     cursor: pointer;
 }
