--- a/css/style.css
+++ b/css/style.css
@@ -37,31 +37,21 @@ body {
 
 .marker-cluster {
     background-clip: padding-box;
-    border-radius: 20px;
+    border-radius: 50%;
     text-align: center;
     color: white;
     font-weight: bold;
     border: 3px solid white;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.4);
+    transition: background-color 0.3s ease;
 }
 
 .marker-cluster div {
     width: 40px;
     height: 40px;
     line-height: 40px;
-    border-radius: 20px;
-}
-
-.marker-cluster-green {
-    background-color: #38b000;
-}
-
-.marker-cluster-orange {
-    background-color: #f8961e;
-}
-
-.marker-cluster-red {
-    background-color: #d00000;
+    border-radius: 50%;
+    font-size: 14px;
 }
 
 #meny {
@@ -233,7 +223,7 @@ body {
     margin-bottom: 5px;
     background-color: green;
     border-color: white;
-    border-width: 5px;
+    border-width: 2px;
     border-radius: 5px;
     cursor: pointer;
 }
