--- a/css/style.css
+++ b/css/style.css
@@ -36,22 +36,16 @@ body {
 }
 
 .marker-cluster {
-    background-clip: padding-box;
-    border-radius: 50%;
+    background: transparent;
+    border: none;
     text-align: center;
     color: white;
     font-weight: bold;
-    border: 3px solid white;
     box-shadow: 0 0 15px rgba(0, 0, 0, 0.4);
-    transition: background-color 0.3s ease;
-}
-
-.marker-cluster div {
-    width: 40px;
-    height: 40px;
-    line-height: 40px;
-    border-radius: 50%;
-    font-size: 14px;
+    transition: background-color 1s ease;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 #meny {
