--- a/css/style.css
+++ b/css/style.css
@@ -30,6 +30,32 @@ body {
     flex-grow: 2;
 }
 
+#intro {
+  position: fixed;
+  inset: 0; /* dekker hele skjermen */
+  background: #111; /* valgfri bakgrunn */
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  overflow: hidden;
+  z-index: 9999;
+}
+
+#train {
+  width: 200px;
+  animation: drive 3s linear forwards;
+}
+
+@keyframes drive {
+  0% {
+    transform: translateX(-250px);
+  }
+  100% {
+    transform: translateX(110vw);
+  }
+}
+
+
 #map {
     height: 80vh;
     width: 80vw;
