--- a/css/style.css
+++ b/css/style.css
@@ -42,16 +42,23 @@ body {
 }
 
 #intro .background {
-    position: absolute;
-    inset: 0;
-    background: linear-gradient(to bottom, #204d20, #0f260f);
-    z-index: 0;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url("Intro_bakgrunn.png");
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  z-index: -1;
 }
+
 
 /* Tog */
 .train {
   position: absolute;
-  width: 180px;
+  width: 400px;
   z-index: 2;
 }
 
@@ -94,7 +101,7 @@ body {
 .flag {
   position: absolute;
   top: -50px;
-  width: 40px;
+  width: 50px;
   animation: fall 5s linear forwards;
   z-index: 3;
 }
