--- a/css/style.css
+++ b/css/style.css
@@ -321,8 +321,7 @@ body {
     justify-content: center;
     width: 2vh;
     height: 2vh;
-    border: 1px solid #ccc;
-    background: #fff;
+    background: green;
     border-radius: .5rem;
     cursor: pointer;
 }
