--- a/css/style.css
+++ b/css/style.css
@@ -352,7 +352,7 @@ body {
     background-color: green;
     height: 3vh;
     width: 3vh;
-    border-color: black;
+    border-color: white;
     border-width: 5px;
     border-radius: 1.5vh;
     cursor: pointer;
